web/style.css
body {
    overflow-y: hidden;
    overflow-x: hidden;
    background-color: #5a849f;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    align-content: center;

}
body.analysis {
    overflow-y: hidden;
    overflow-x: hidden;
    background-color: #F7F8F1;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    align-content: center;

}
sidebar {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
    order: 0;
}
h1 {
    color: beige;
    text-align: center;
    background-color: #451F0C;
    font-family: Verdana, humanist, sans-serif;

}
h2 {
    color: beige;
    text-align: center;
    background-color: #451F0C;
    margin-top: 2px;
    margin-bottom: 2px;
    font-family: Verdana, humanist, sans-serif;

}
h3 {
    color: beige;
    text-align: center;
    background-color: #451F0C;
    margin-top: 2px;
    margin-bottom: 2px;
    font-family: Verdana, humanist, sans-serif;

}
h3.sidebar-header {
    color: beige;
    text-align: center;
    background-color: #451F0C;
    margin-top: 2px;
    margin-bottom: 2px;
    width: 200px;
    font-family: Verdana, humanist, sans-serif;
}
p {
    color: beige;
    font-size: 1.3em;
    background-color: #451F0C;
    margin-top: 4px;
    margin-bottom: 4px;
    line-height: 120%;
    font-family: Verdana, humanist, sans-serif;


}
ul {
    color: beige;
    font-size: 1.3em;
    background-color: #451F0C;
    font-family: Verdana, humanist, sans-serif;



}
li {
    text-align: justify;
    font-family: Verdana, humanist, sans-serif;



}
div.corpus {
    height: 98vh;
    overflow-y: scroll;
    height: 600px;
    width: 800px;


}
div.cover {
    height: 98vh;
    overflow-y: scroll;
    height: 600px;
    width: 800px;


}
div.open {
    height: 98vh;
    overflow-y: scroll;
    height: 600px;
    width: 800px;


}
div.closed {
    height: 98vh;
    overflow-y: scroll;
    height: 600px;
    width: 750px;


}

div.text {
    height: 98vh;
    height: 300px;
    width: 400px;
    padding: 10px;

}
.texts-filtering-box {
    height: 100px;
    width: 200px;
    padding-top: 50px;

}
.texts-filtering-container {
    height: 200px;
    width: 200px;


}

.attribute-filtering-box {
    height: 98vh;
    overflow-y: scroll;
    height: 200px;
    width: 200px;
    
}

.cover {
    background: url("resize_front-cover-2.jpg");
    background-repeat: no-repeat;
    background-size: 800px, 800px;
    display: block;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;
    align-self: auto;
    order: 0;




}
.open {
    background: url("resize_open-book-2.jpg");
    background-repeat: no-repeat;
    background-size: 800px, 800px;
    display: block;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;
    align-self: auto;
    order: 0;
    



}
.closed {
    background: url("resize_back-cover-2.jpg");
    background-repeat: no-repeat;
    background-size: 790px, 900px;
    display: block;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;
    align-self: auto;
    order: 0;

}
.menu {
    position: relative;
    font-size: 1.5em;
    text-align: center;
    background-color: #451F0C;
    display: block;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;
    align-self: center;
    order: 2;
    color: beige;

}
text {
    order: 0;
    display: block;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;
    align-self: flex-start;
}
th, td {
  border: 1px solid;
    color: white;
}
table{
    width: 100%;
    border: 1px solid;
    background: #451F0C;
}

a:link {
    color: gold;
}
a:visited {
    color: white;
}
span.high.anger{
    color: red;
    font-weight:bold;
}
span.high.joy{
    color: pink;
    font-weight:bold;
}
span.high.contentment{
    color: green;
    font-weight:bold;
}
span.high.fearE{
    color: yellow;
    font-weight:bold;
}
span.high.sorrow{
    color: lightblue;
    font-weight:bold;
}
span.light.pleading{
    text-decoration: underline;     
    text-decoration-color: orange;  
}
span.light.petitioning{
    text-decoration: underline;     
    text-decoration-color: #FF0099;  
}
span.light.violence{
    text-decoration: underline;     
    text-decoration-color: red;  
}
span.light.boasting{
    text-decoration: underline;     
    text-decoration-color: green;  
}
span.light.anxiety{
    text-decoration: underline;     
    text-decoration-color: lightblue;  
}
span.light.praise{
    text-decoration: underline;     
    text-decoration-color: lightpink;  
}
span.light.fear{
    text-decoration: underline;     
    text-decoration-color: yellow;  
}
span.light.righteousness{
    text-decoration: underline;     
    text-decoration-color: #CC80CC;  
}

